--- a/lib/index.html
+++ b/lib/index.html
@@ -10,6 +10,16 @@
     <body>
         <article id="container">
             <section id="phone">
+                <div id="number">
+                    <span></span>
+                    <button id="edit-button">修改</button>
+                </div>
+                <div id="edit">
+                    <form>
+                        <input type="text">
+                        <button id="save-button">儲存</button>
+                    </form>
+                </div>
             </section>        
             <section id="wave">
             </section>
