--- a/lib/index.html
+++ b/lib/index.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Foo</title>
+        <title>Sensor testing platform</title>
         <link rel="stylesheet" href="stylesheets/font-awesome.css">
         <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
         <script data-main="scripts/main" src="scripts/lib/require.js"></script>
     </head>    
     <body>
         <article id="container">
+            <h1>Sensor testing platform</h1>
             <section id="phone">
                 <div id="number">
                     <span></span>
