--- a/lib/index.html
+++ b/lib/index.html
@@ -48,7 +48,7 @@
                 </section>
                 <section id="hydrometer">
                     <div id="hydrometer-caption">Humidity</div>                    
-                    <div id="hydrometer-value">50</div>
+                    <div id="hydrometer-value"></div>
                 </section>
             </section>
         </article>
